Fix for the Question 2 Dropdown not showing!

--- a/StaticFile/stylesheets/style.css
+++ b/StaticFile/stylesheets/style.css
@@ -336,6 +336,7 @@ body {
     width: 400px; 
     text-align: center; 
     margin: 0 auto 30px;
+    position: relative;
 }
 
 /*form styles */
